--- a/www/css/hosting-compare.css
+++ b/www/css/hosting-compare.css
@@ -10,12 +10,14 @@ nav .navbar-nav li a:hover{
     margin-top: 50px;
 }
 
-h1 {
+#first-row h1 {
     color: #614a8f;
     font-size: x-large;
     font-weight: bold;
     text-transform: uppercase;
 }
+
+/* FAQS */
 
 h2 {
     margin-top: 20px;
